# ollama-deproxy

./: .aiignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
DOCS/: ENVIRONMENT.md
src/ollama_deproxy/: __init__.py  __main__.py  best_hash.py  cache_base.py  config.py  config_logging.py  depends.py  get_version.py  handlers.py  http_connection.py  lifespan.py  main.py  ollama_helper.py  response_cache.py  services.py  settings_base.py  utils.py
srcipts/: build.cmd
