[project]
name = "ollama-deproxy"
version = "0.4.2"
description = "A lightweight, feature-rich proxy for Ollama, designed for development, testing, and staging environments. It simplifies access to remote Ollama instances that are wrapped behind another proxy layer like OpenWebUI. Anthropic and OpenAI compatible endpoints, included."
authors = [{ name = "lexxai", email = "lexxai@gmail.com" }]
license = { text = "MIT" }
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=7.0.2",
    "fastapi>=0.135.1",
    "httpx[brotli,http2,zstd]>=0.28.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "types-cachetools>=6.2.0.20251022",
    "uvicorn[standard]>=0.41.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "http", "rest-api", "proxy", "proxy-server", "fastapi", "openai-api", "ollama", "ollama-webui", "ollama-api", "anthropic-api", "openwebui-api"]


[project.urls]
Homepage = "https://github.com/lexxai/ollama-deproxy"
Documentation = "https://github.com/lexxai/ollama-deproxy#readme"
Repository = "https://github.com/lexxai/ollama-deproxy.git"
Issues = "https://github.com/lexxai/ollama-deproxy/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# If you use src/ layout (recommended)
packages = ["src/ollama_deproxy"]

[project.scripts]
ollama-deproxy = "ollama_deproxy:run"

[tool.hatch.build.sdist]
relative-install = true


# Code-style tools

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.2",
]
